<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sao_paulo_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtcidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:padding="8dp"
        android:text="@string/txtCidade"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img"
        app:layout_constraintEnd_toEndOf="@id/img"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintTop_toTopOf="@id/img"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/viwDivisor"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <TextView
        android:id="@+id/txtDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txtDias"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viwDivisor" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtValor"
        app:layout_constraintStart_toStartOf="@id/txtDias"
        app:layout_constraintTop_toBottomOf="@id/txtDias"
        android:textSize="20sp"
        android:textColor="@android:color/holo_green_dark"/>
</androidx.constraintlayout.widget.ConstraintLayout>