<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResumoPacoteActivity">

    <ImageView
        android:id="@+id/imgResumoLocal"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/imgLocal"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/txtResumoLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgResumoLocal"
        tools:text="Sāo Paulo" />

    <TextView
        android:id="@+id/txtResumoDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtResumoLocal"
        app:layout_constraintTop_toBottomOf="@+id/txtResumoLocal"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/txtResumoPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txtResumoDias"
        app:layout_constraintTop_toBottomOf="@+id/txtResumoDias"
        tools:text="10/02 - 12/02/2020" />

    <TextView
        android:id="@+id/txtResumoTituloPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lblPreco"
        app:layout_constraintBottom_toTopOf="@+id/txtResumoPreco"
        app:layout_constraintEnd_toEndOf="@+id/txtResumoPreco" />

    <TextView
        android:id="@+id/txtResumoPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtResumoPeriodo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="R$ 324,98" />

    <Button
        android:id="@+id/btnPagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/btnPagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgResumoLocal"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>